feat: refactor trigger into sensor model
