# cmd/server/cmd/cron-service.go
@@ -7,7 +7,7 @@ import (
 	userDomain "github.com/peteqproj/peteq/domain/user"
 	"github.com/peteqproj/peteq/internal"
 
-	triggerDomain "github.com/peteqproj/peteq/domain/trigger"
+	sensorDomain "github.com/peteqproj/peteq/domain/sensor"
 	"github.com/peteqproj/peteq/pkg/config"
 	"github.com/peteqproj/peteq/pkg/cron"
 	"github.com/peteqproj/peteq/pkg/db"
@@ -33,10 +33,10 @@ var cronServiceCmdFlags struct {
 }
 
 type (
-	userTriggerPair struct {
-		user     userDomain.User
-		triggers map[string]*triggerDomain.Trigger
-		cron     cron.Cron
+	userSensorPair struct {
+		user    userDomain.User
+		sensors map[string]*sensorDomain.Sensor
+		cron    cron.Cron
 	}
 )
 
@@ -64,12 +64,12 @@ var cronServiceCmd = &cobra.Command{
 			Logger: logr.Fork("repo", "user"),
 		}
 
-		triggerRepo := &triggerDomain.Repo{
+		sensorRepo := &sensorDomain.Repo{
 			DB:     db,
-			Logger: logr.Fork("repo", "trigger"),
+			Logger: logr.Fork("repo", "sensor"),
 		}
-		if err := triggerRepo.Initiate(context.Background()); err != nil {
-			utils.DieOnError(err, "Failed to init trigger repo")
+		if err := sensorRepo.Initiate(context.Background()); err != nil {
+			utils.DieOnError(err, "Failed to init sensor repo")
 		}
 		ebus := internal.NewEventBusFromFlagsOrDie(db, userRepo, false, logr.Fork("module", "eventbus"))
 		if err := ebus.Start(); err != nil {
@@ -78,7 +78,7 @@ var cronServiceCmd = &cobra.Command{
 		defer ebus.Stop()
 		logr.Info("Eventbus connected")
 
-		go loop(userRepo, triggerRepo, ebus, logr)
+		go loop(userRepo, sensorRepo, ebus, logr)
 
 		s.SetReady()
 		err = s.Start()
@@ -89,8 +89,8 @@ var cronServiceCmd = &cobra.Command{
 func init() {
 	startCmd.AddCommand(cronServiceCmd)
 }
-func loop(userRepo *userDomain.Repo, triggerRepo *triggerDomain.Repo, ebus eventbus.Eventbus, lgr logger.Logger) {
-	l := map[string]userTriggerPair{}
+func loop(userRepo *userDomain.Repo, sensorRepo *sensorDomain.Repo, ebus eventbus.Eventbus, lgr logger.Logger) {
+	l := map[string]userSensorPair{}
 	for {
 		select {
 		case _ = <-time.After(time.Minute * 1):
@@ -106,9 +106,9 @@ func loop(userRepo *userDomain.Repo, triggerRepo *triggerDomain.Repo, ebus event
 						continue
 					}
 					lgr.Info("New user added", "email", u.Spec.Email, "id", u.Metadata.ID)
-					l[u.Metadata.ID] = userTriggerPair{
-						user:     *u,
-						triggers: map[string]*triggerDomain.Trigger{},
+					l[u.Metadata.ID] = userSensorPair{
+						user:    *u,
+						sensors: map[string]*sensorDomain.Sensor{},
 						cron: cron.New(cron.Options{
 							EventPublisher: ebus,
 							Logger:         lgr.Fork("user", u.Metadata.ID),
@@ -120,20 +120,20 @@ func loop(userRepo *userDomain.Repo, triggerRepo *triggerDomain.Repo, ebus event
 
 				for id, pair := range l {
 					ctx := tenant.ContextWithUser(context.Background(), pair.user)
-					res, err := triggerRepo.ListByUserid(ctx, id)
+					res, err := sensorRepo.ListByUserid(ctx, id)
 					if err != nil {
-						lgr.Info("Failed to load user triggers", "error", err.Error(), "user", id)
+						lgr.Info("Failed to load user sensors", "error", err.Error(), "user", id)
 					}
 
 					for _, t := range res {
-						if _, found := l[id].triggers[t.Metadata.ID]; found {
+						if _, found := l[id].sensors[t.Metadata.ID]; found {
 							continue
 						}
 						if t.Spec.Cron == nil {
 							continue
 						}
-						lgr.Info("New cron trigger added", "cron", *t.Spec.Cron, "id", t.Metadata.ID)
-						pair.triggers[t.Metadata.ID] = t
+						lgr.Info("New cron sensor added", "cron", *t.Spec.Cron, "id", t.Metadata.ID)
+						pair.sensors[t.Metadata.ID] = t
 						pair.cron.AddFunc(t.Metadata.ID, *t.Spec.Cron)
 					}
 				}
