# docs/swagger.json
@@ -249,6 +249,50 @@
                 }
             }
         },
+        "/c/sensor/run": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Sensor run",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sensor Command API"
+                ],
+                "parameters": [
+                    {
+                        "description": "Sensor trigger",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/SensorRunRequestBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/CommandResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/CommandResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/c/task/complete": {
             "post": {
                 "security": [
@@ -469,50 +513,6 @@
                 }
             }
         },
-        "/c/trigger/run": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Trigger run",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Trigger Command API"
-                ],
-                "parameters": [
-                    {
-                        "description": "Trigger run",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/TriggerRunRequestBody"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/CommandResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/CommandResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/c/user/login": {
             "post": {
                 "description": "Login",
@@ -696,14 +696,14 @@
                 }
             }
         },
-        "/q/triggers": {
+        "/q/sensors": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Triggers View",
+                "description": "Sensors View",
                 "produces": [
                     "application/json"
                 ],
@@ -714,7 +714,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/triggers.triggersView"
+                            "$ref": "#/definitions/sensors.sensorsView"
                         }
                     }
                 }
@@ -855,7 +855,7 @@
                 }
             }
         },
-        "TriggerRunRequestBody": {
+        "SensorRunRequestBody": {
             "type": "object",
             "required": [
                 "id"
@@ -1099,6 +1099,37 @@
                 }
             }
         },
+        "sensors.sensorViewItem": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "spec": {
+                    "type": "object"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "sensors.sensorsView": {
+            "type": "object",
+            "properties": {
+                "sensors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/sensors.sensorViewItem"
+                    }
+                }
+            }
+        },
         "task.Metadata": {
             "type": "object",
             "properties": {
@@ -1151,54 +1182,6 @@
             "properties": {
                 "id": {
                     "type": "string"
-                }
-            }
-        },
-        "triggers.triggerExecutionHistoryItem": {
-            "type": "object",
-            "properties": {
-                "manual": {
-                    "type": "boolean"
-                },
-                "triggeredAt": {
-                    "type": "string"
-                }
-            }
-        },
-        "triggers.triggerViewItem": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "history": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/triggers.triggerExecutionHistoryItem"
-                    }
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "spec": {
-                    "type": "object"
-                },
-                "type": {
-                    "type": "string"
-                }
-            }
-        },
-        "triggers.triggersView": {
-            "type": "object",
-            "properties": {
-                "triggers": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/triggers.triggerViewItem"
-                    }
                 }
             }
         }
